[package]
name = "cosmic-app-template"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
rand = "0.8.5"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

[profile.release]
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
